--- a/21.10/contracts/projeto_final/v3.html
+++ b/21.10/contracts/projeto_final/v3.html
@@ -182,6 +182,13 @@
     .content-section.active {
       display: block;
     }
+    #totalBaterias {
+        width: 100%;
+        font-weight: bold;
+        text-align: center;
+        font-size: 1.2rem;
+    }
+
   </style>
 </head>
 <body>
